--- a/photographer.html
+++ b/photographer.html
@@ -48,6 +48,7 @@
     <div class="media_tri" aria-hidden="false">
       <label id="tri_select_label" for="tri_select">Trier par</label>
       <select id="tri_select" aria-labelledby="media_tri">
+        <option></option>
         <option>Popularité</option>
         <option>Date</option>
         <option>Titre</option>
@@ -61,7 +62,6 @@
       <p class="photographer_daily_price"></p>
     </div>
     <script src="/scripts/utils/contactForm.js"></script>
-    <script src="/scripts/utils/triSelect.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/factories/photographer.js"></script>
     <script src="/scripts/factories/media.js"></script>
