--- a/photographer.html
+++ b/photographer.html
@@ -71,9 +71,9 @@
       </div>
       <p class="photographer_daily_price"></p>
     </div>
-    <script src="/scripts/utils/contactForm.js"></script>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/factories/photographer.js"></script>
-    <script src="/scripts/factories/media.js"></script>
+    <script src="scripts/utils/contactForm.js"></script>
+    <script src="scripts/pages/photographer.js"></script>
+    <script src="scripts/factories/photographer.js"></script>
+    <script src="scripts/factories/media.js"></script>
   </body>
 </html>
