--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
       integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -28,7 +28,7 @@
 			<div class="modal">
 				<header>
           <h1 id="contact_modal_header">Contactez-moi <br> <span id="photographer_name"></span></h1>
-          <img src="assets/icons/close.svg" onclick="closeModal()" aria-label="Close contact form"/>
+          <img src="assets/icons/close.svg" onclick="closeModal()" aria-label="Close contact form" alt="Close contact form"/>
         </header>
 				<form id="contact_form">
 					<div>
@@ -57,7 +57,7 @@
       <div id="media_modal" aria-label="image closeup view" role="dialog" aria-hidden="true">
         <div class="caroussel_modal">
           <header>
-            <img src="assets/icons/close copy.svg" onclick="closeCarousselModal()" alt="Close dialog">
+            <img src="assets/icons/close copy.svg" onclick="closeCarousselModal()" alt="Close dialog" aria-label="Close dialog">
           </header>
           <div class="slider">
           </div>
